@@ -1,3 +1,10 @@
+2006-02-20 [wwp]	2.0.0cvs66
+
+	* src/summaryview.c
+	* src/gtk/gtksctree.c
+	* src/gtk/gtkshruler.c
+		changed more runtime typecast checks.
+
 2006-02-20 [wwp]	2.0.0cvs65
 
 	* src/summary_search.c
